# DicePlayer

./: .control.in.swp  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  control.example.yml  control.in  control.yml  control.yml.example  control.yml.exemple  diceplayer-0.0.1.py  diceplayer.py  geoms.xyz  ghosts.in  lps.in  new_cyclo.xyz  new_cyclo.xyz.new  new_cyclo.xyz.new2  othercontrol.in  phb.ljc  phb.ljc.example  phb.pot  phb.xyz.last-p01  phb.xyz.last-p02  pyproject.toml  run.log.backup  setup.py  test4.py
.github/workflows/: build-and-uplod.yml  python-pypi-test-upload.yml  python-test-and-build.yml  python-tests.yml  run-tests.yml
DPpack/: .MolHandling.py  .SetGlobals.py  Dice.py  Gaussian.py  Misc.py  MolHandling.py  Molhandling.py  SetGlobals.py  SetGlobalsClass.py
diceplayer/: __init__.py  __main__.py  player.py
diceplayer/DPpack/: Gaussian.py  MolHandling.py  Molcas.py  Optimization.py  Player.py  SetGlobals.py
diceplayer/DPpack/Environment/: Atom.py  Molecule.py  System.py
diceplayer/DPpack/Utils/: Optimization.py  StepDTO.py  Validations.py
diceplayer/config/: dice_config.py  gaussian_config.py  player_config.py
diceplayer/environment/: __init__.py  atom.py  molecule.py  system.py
diceplayer/interface/: __init__.py  __interface.py  dice_interface.py  gaussian_interface.py
diceplayer/shared/config/: dice_config.py  dice_dto.py  gaussian_config.py  gaussian_dto.py  player_config.py  player_dto.py  step_dto.py
diceplayer/shared/environment/: atom.py  molecule.py  system.py
diceplayer/shared/interface/: __init__.py  __interface.py  dice_interface.py  gaussian_interface.py
diceplayer/shared/utils/: dataclass_protocol.py  logger.py  misc.py  ptable.py
diceplayer/utils/: __init__.py  cache.py  logger.py  misc.py  ptable.py
tests/: test_player.py
tests/config/: test_dice_dto.py  test_gaussian_dto.py  test_player_dto.py
tests/mocks/: mock_inputs.py  mock_proc.py
tests/shared/config/: test_dice_dto.py  test_gaussian_dto.py  test_player_dto.py
tests/shared/environment/: molecule.py  test_atom.py  test_molecule.py  test_system.py
tests/shared/interface/: test_dice_interface.py  test_gaussian_interface.py
tests/shared/interface/test/step01/p01/: test
tests/shared/utils/: test_logger.py
