[project]
name = "diceplayer"
description = "Python Program for Molecular Optimization in Non-Vacuum Mediums"
authors = [
    { name = "Vitor Hideyoshi", email = "vitor.h.n.batista@gmail.com" },
    { name = "Herbert Georg", email = "hcgeorg@ufg.br" }
]
readme = "README.md"
license = "GPL-2.0-only"
scripts = { diceplayer = "diceplayer.__main__:main" }
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]


# Poetry configuration
[tool.poetry]
version = "0.0.0"


[tool.poetry.dependencies]
numpy = "^1.26.4"
argparse = "^1.4.0"
setproctitle = "^1.3.2"
pyyaml = "^6.0"
nptyping = "^2.5.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
poethepoet = "^0.27.0"


# Build system
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry_dynamic_versioning.backend"


# Development tools
[tool.poe.tasks]
hooks = "pre-commit install --config .pre-commit-config.yaml"

[tool.isort]
profile = "black"
line_length = 79
sections=[
    "FUTURE",
    "FIRSTPARTY",
    "LOCALFOLDER",
    "THIRDPARTY",
    "STDLIB",
]
