[project]
name = "diceplayer"
description = "Python Program for Molecular Optimization in Non-Vacuum Mediums"
authors = [
    { name = "Vitor Hideyoshi", email = "vitor.h.n.batista@gmail.com" },
    { name = "Herbert Georg", email = "hcgeorg@ufg.br" }
]
readme = "README.md"
license = "GPL-2.0-only"
scripts = { diceplayer = "diceplayer.__main__:main" }
requires-python = ">=3.10"
dynamic = ["version"]


dependencies = [
    "numpy>=2.2.0",
    "argparse>=1.4.0",
    "setproctitle>=1.3.2",
    "pyyaml>=6.0",
    "pydantic>=2.12.5",
    "typing-extensions>=4.15.0"
]


[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "isort>=5.13.2",
    "black>=24.4.2",
    "pre-commit>=3.7.1",
    "poethepoet>=0.27.0",
    "ruff>=0.15.2"
]


# Build system
[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


# POE Tasks
[tool.poe.tasks]
create-hooks        = "bash .githooks/set-hooks.sh"
tests               = "python -m coverage run -m unittest discover -v"
tests-report        = "python -m coverage xml"



# Tests
[tool.coverage.run]
omit = [
    "tests/*",
]



# Linters
[tool.ruff.lint]
extend-select = ["I"]
ignore = [
    "E741" # ambiguous variable name 'l', 'O', or 'I'
]

[tool.ruff.lint.isort]
known-first-party = ["jambo"]
section-order=[
    "future",
    "first-party",
    "local-folder",
    "third-party",
    "standard-library",
]
lines-after-imports = 2


[tool.pyright]
venvPath = "."
venv = ".venv"